# telemetry-python

./: .cruft.json  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  README.rst  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  release.yml  tests.yml  update-template.yaml
docs/: index.md
reference/iterative_telemetry/: index.html
search/: search_index.json
src/iterative_telemetry/: __init__.py
tests/: __init__.py  test_iterative_telemetry.py  test_user_id.py
