[metadata]
description = Common library for sending telemetry
name = iterative-telemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/telemetry-python
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    requests
    appdirs
    filelock
    distro

[options.extras_require]
tests =
    pytest>=7.2.0,<9
    pytest-sugar
    pytest-cov
    pytest-mock
    pylint==2.15.0
    mypy==1.14.1
    types-requests
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
